# OIS

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  Main.qml  application.cpp  application.h  fixup_script.cmake  imageviewer.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h
app/cmake/: conf.cmake.in  git.cmake.in  install.cmake.in  settings.cmake.in  shared_deps.cmake.in  targets.cmake.in
modules/DatabaseModule/: CMakeLists.txt  databasehandler.cpp  databasehandler.h  fileHandler.cpp  fileHandler.h
modules/ImageProcessingModule/: CMakeLists.txt  IImageProcessingService.h  IImageProcessor.h  imageprocessingservice.cpp  imageprocessingservice.h  imageprocessor.cpp  imageprocessor.h  imageprocessorbridge.cpp  imageprocessorbridge.h
modules/ImageProcessingModule/facade/: IImageProcessingService.h  imageprocessingservice.h
modules/ImageProcessingModule/private/: imagepreprocessing.h  processmanager.h  workingroom.h  workroom.h
modules/ImageProcessingModule/src/: imagepreprocessing.cpp  imageprocessingservice.cpp  processmanager.cpp  workingroom.cpp  workroom.cpp
modules/IntegrationModule/: CMakeLists.txt
modules/VisualizationModule/: ButtonSideBar.qml  CMakeLists.txt  CMakeLists.txt.autosave  IVisualizationService.h  ImageOpenDialog.qml  ImageView.qml  MyWindow.qml  PreProcessedImageView.qml  SideBar.qml  SideBarButton.qml  Visualization.cpp  Visualization.qml  VisualizationModule.qrc  chartwidget.cpp  chartwidget.h  exportmanager.cpp  exportmanager.h  filehandler.cpp  filehandler.h  filehandlerbridge.cpp  filehandlerbridge.h  imageviewerwidget.cpp  imageviewerwidget.h  qtquickcontrols2.conf  statisticswidget.cpp  statisticswidget.h  visualizationmodule_global.cpp  visualizationmodule_global.h  visualizationservice.cpp  visualizationservice.h  visualizer.cpp  visualizer.h
modules/VisualizationModule/facade/: IVisualizationService.h  visualizationservice.h
modules/VisualizationModule/private/: filehandler.h  filehandlermanager.h  filehandlernew.h  mymodel.h
modules/VisualizationModule/qml/: AppMenuBar.qml  BlureWidget.qml  ButtonBar.qml  CamcoderIpInput.qml  CameraView.qml  CustomWidget.qml  FutterView.qml  HomeView.qml  IconButton.qml  ImageContainer.qml  ImagePickerDialog.qml  ImageProcessingMode.qml  ImageProcessingView.qml  ImageView.qml  InformationView.qml  Launcher.qml  MainContentView.qml  MaskOverlay.qml  ModeIconButton.qml  ModeTabBar.qml  SideBar.qml  SideBarButton.qml  VideoPlayerView.qml  ViewContainer.qml  Visualization.qml
modules/VisualizationModule/src/: filehandler.cpp  filehandlermanager.cpp  filehandlernew.cpp  visualizationservice.cpp
